[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/background.png" type="Texture" id=2]
[ext_resource path="res://fonts/hour5.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/background.gd" type="Script" id=4]
[ext_resource path="res://scripts/stage.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="stage" type="Node2D"]
script = ExtResource( 5 )

[node name="spawn_timer" type="Timer" parent="."]
autostart = true

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 60, 92 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="score" type="Label" parent="ui"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.701961, 0.52549, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0.0745098, 0.478431, 0.0901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "score: 0"
uppercase = true

[node name="retry" type="Label" parent="ui"]
visible = false
anchor_left = 0.211
anchor_top = 0.477
anchor_right = 0.284
anchor_bottom = 0.505
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.701961, 0.52549, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0.0745098, 0.478431, 0.0901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game over please press enter to retry"
align = 1
valign = 1
uppercase = true

[connection signal="destroyed" from="player" to="." method="_on_player_destroyed"]
