[gd_scene load_steps=10 format=3 uid="uid://doper7tfjgggf"]

[ext_resource type="Texture2D" uid="uid://ufynvgcr1iaa" path="res://sprites/background.png" id="1_83ldw"]
[ext_resource type="Script" path="res://scripts/stage.gd" id="1_mgmwv"]
[ext_resource type="PackedScene" uid="uid://7f16ut20711u" path="res://scenes/player.tscn" id="2_rrlbo"]
[ext_resource type="Script" path="res://scripts/background.gd" id="3_5h3u5"]
[ext_resource type="FontFile" uid="uid://bikgcs0l0w2y1" path="res://fonts/font.ttf" id="3_x0u2i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dypdl"]

[sub_resource type="Theme" id="Theme_8nn82"]
Label/colors/font_color = Color(0.0588235, 0.976471, 0.768627, 1)
Label/colors/font_outline_color = Color(1, 1, 1, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 8
Label/fonts/font = ExtResource("3_x0u2i")
Label/styles/normal = SubResource("StyleBoxEmpty_dypdl")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dho3k"]
bg_color = Color(0.478431, 0.780392, 0.501961, 1)

[sub_resource type="Theme" id="Theme_hoxlx"]
Button/font_sizes/font_size = 13
Button/fonts/font = ExtResource("3_x0u2i")
Button/styles/normal = SubResource("StyleBoxFlat_dho3k")

[node name="stage" type="Node2D"]
script = ExtResource("1_mgmwv")

[node name="spawn_timer" type="Timer" parent="."]
autostart = true

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource("1_83ldw")
centered = false
script = ExtResource("3_5h3u5")
metadata/_edit_lock_ = true

[node name="player" parent="." instance=ExtResource("2_rrlbo")]
position = Vector2(14, 84)

[node name="ui" type="CanvasLayer" parent="."]

[node name="score" type="Label" parent="ui"]
offset_left = 9.0
offset_top = 6.0
offset_right = 40.0
offset_bottom = 23.0
theme = SubResource("Theme_8nn82")
text = "0
"
uppercase = true

[node name="retry" type="Label" parent="ui"]
visible = false
offset_left = 72.0
offset_top = 73.0
offset_right = 112.0
offset_bottom = 98.0
theme = SubResource("Theme_8nn82")
text = "Game OVER
HIT <Enter> to retry"
horizontal_alignment = 1

[node name="pause_menu" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="background" type="ColorRect" parent="pause_menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.541176)

[node name="CenterContainer" type="Panel" parent="pause_menu"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.5
offset_top = -32.5
offset_right = 40.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hoxlx")

[node name="quit" type="Button" parent="pause_menu/CenterContainer"]
layout_mode = 2
offset_left = 8.5
offset_top = 39.5
offset_right = 70.5
offset_bottom = 57.5
text = "Quit"

[node name="resume" type="Button" parent="pause_menu/CenterContainer"]
layout_mode = 2
offset_left = 9.0
offset_top = 13.0
offset_right = 71.0
offset_bottom = 32.0
text = "Resume"

[connection signal="pressed" from="pause_menu/CenterContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="pause_menu/CenterContainer/resume" to="." method="_on_resume_pressed"]
